# SUDOku

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: code-ql.yml  codeql-analysis.yml  sonarqube.yml
NativeComponent/: CMakeLists.txt  main.cpp
auth-server/: build.gradle
auth-server/src/main/resources/: application.yaml
backend/: build.gradle
backend/src/main/resources/: application.yaml
caff-service/: .gitignore  build.gradle  settings.gradle
caff-service/src/main/java/hu/bme/compsec/sudoku/: SudokuApplication.java
caff-service/src/main/resources/: application.yaml
caff-service/src/test/java/hu/bme/compsec/sudoku/: CAFFRepositoryIntegrationTest.java  CAFFRepositoryTest.java  CAFFServiceTest.java  (+1 more)
common/: build.gradle
common/src/main/java/config/: TestSecurityConfig.java
frontend/: .env  .eslintrc.js  package.json  proxy.conf.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx  setupProxy.js
frontend/src/components/: AddComment.tsx  Caff.tsx  Comment.tsx  Menu.tsx
frontend/src/components/test/: Chart.tsx  Copyright.tsx  Deposits.tsx  Orders.tsx  Title.tsx
frontend/src/config/: config.ts  logging.ts  routes.ts
frontend/src/interfaces/: auth.ts  caff.ts  comment.ts  component.ts  propertyUpdate.ts  token.ts  userData.ts  userDataEdit.ts
frontend/src/pages/: AddCaff.tsx  Authorized.tsx  BrowseCaff.tsx  Home.tsx  Login.tsx  Logout.tsx  NotFound.tsx  Profile.tsx  Register.tsx
frontend/src/pages/test/: AdminBoard.tsx  MuiTest.tsx  Test.tsx  UserBoard.tsx
frontend/src/services/: AuthHeader.ts  AuthService.ts  AuthType.ts  BasicAuthHeader.ts  CaffService.ts  TokenService.ts  UserService.ts  useAxios.ts
frontend/src/state/: store.ts
frontend/src/state/action-creators/: index.ts
frontend/src/state/action-types/: index.ts
frontend/src/state/actions/: index.ts
frontend/src/state/reducers/: authMessageReducer.ts  authReducer.ts  caffReducer.ts  index.ts  infoMessageReducer.ts  testReducer.ts  userReducer.ts
native/: CMakeLists.txt  main.cpp
wiki/: readme.md
(+113 files in other folders)
